Fix project snippet visited invisible bug

--- a/global-styles.css
+++ b/global-styles.css
@@ -143,6 +143,9 @@ input:focus, textarea:focus {
     color: var(--page-text);
     height: 100%;
 }
+.project-snippet:visited h2 {
+    color: var(--link-visited);
+}
 .project-snippet:hover {
     border-color: var(--primary-color);
     transform: translateY(-4px);
